enhance ModelTransformerExtract, ensure plantuml dep for image production is not required for ConverterMain, suppress spotbugs and checkstyle, add egc-api split test